# path-tracer

./: CMakeLists.txt  README.md
blender/: blender_comp.blend  blender_comp.blend1  blender_comp_lamb.blend  plane_stones.blend  sky_cubemap.blend  sky_cubemap.blend1
cmake/: FindASSIMP.cmake
images/: Thumbs.db
qt/: cudarunthread.cpp  dialoglogger.cpp  loaddialog.cpp  mainwindow.cpp  previewglwidget.cpp  sceneloaderthread.cpp
qt/include/: cudarunthread.h  dialoglogger.h  loaddialog.h  mainwindow.h  previewglwidget.h  qtconfig.h  sceneloaderthread.h  ui_loaddialog.h  ui_mainwindow.h
scenes/: cornell_box.mtl  materials.mtl  scene_blender_comp.json  scene_blender_comp_open.json  scene_example.json  scene_geoms.json  scene_lamborghini.json  scene_lamborghini_door.json  scene_sky_map.json  scene_teapot.json
scenes/blender_comp/: blender_comp.mtl
scenes/blender_comp_open/: Thumbs.db  blender_open.mtl
scenes/example/: cube.mtl
scenes/geoms/: pyramid.mtl
scenes/lamborghini_door/: lp560.mtl  plane_stones.mtl
scenes/sky_map/: plane_stones.mtl  sky_cubemap.mtl
scenes/teapot&balls/: cornell_box.mtl  teapot.mtl
src/: KDTree.cpp  camera.cpp  camera.h  config.h  constants.h  cudaUtility.cpp  cudaUtility.h  cutility.cuh  cutility.h  errors.h  intersect.cuh  intersect.h  jsonResolve.cpp  jsonResolve.h  kernel.cu  kernel.h  main.cpp  main.h  pathtracing.cu  pathtracing.cuh  pathtracing.h  pbotest.h  pbowritetest.cu  qt5gui.cpp  qt5gui.h  radiance.cuh  scenestate.cpp  scenestate.h  shaderUtility.cpp  shaderUtility.h  shaderUtils.cpp  shaderUtils.h  surfaces.cuh  utility.cpp  utility.cuh  utility.h  view.cpp  view.h  world.cpp  world.h  (+3 more)
src/cuda/: kernel.cu
textures/: Thumbs.db
textures/lp560/: auroxlede.tga  auroxlede1.tga  badging.tga  brk.tga  brklit.tga  brklite_glass.tga  chassis.tga  cockp.tga  cockpit.tga  conti_tread.tga  dabbeef0.tga  dash1.tga  displ.tga  display.tga  door.tga  exh.tga  hlite.tga  hoodtrunk.tga  interiorr.tga  metalref.tga  misc.tga  ref.tga  remap.tga  scratch.tga  seat.tga  steering.tga  tire2.tga  windref.tga
